# preingest/Noord.HollandsArchief.Pre.Ingest.WorkerService/Connected Services/OpenAPIService/OpenAPI.nswag.json
@@ -111,6 +111,19 @@
         }
       }
     },
+    "/api/Output/prewashlist": {
+      "get": {
+        "tags": [
+          "Output"
+        ],
+        "operationId": "Get a list of files from prewash folder.",
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Preingest/check": {
       "get": {
         "tags": [
@@ -573,6 +586,30 @@
           "Preingest"
         ],
         "operationId": "Transfer *.sip.zip for transfer agent",
+        "parameters": [
+          {
+            "name": "guid",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Preingest/prewash/{guid}": {
+      "post": {
+        "tags": [
+          "Preingest"
+        ],
+        "operationId": "Prewash .metadata files.",
         "parameters": [
           {
             "name": "guid",
@@ -1134,6 +1171,10 @@
           "collectionRef": {
             "type": "string",
             "nullable": true
+          },
+          "prewash": {
+            "type": "string",
+            "nullable": true
           }
         }
       },
@@ -1171,7 +1212,9 @@
           "SidecarValidationHandler",
           "SipCreatorHandler",
           "TransformationHandler",
-          "SipZipHandler"
+          "SipZipMetadataValidationHandler",
+          "SipZipCopyHandler",
+          "PrewashHandler"
         ]
       }
     }
